name:                slides
version:             0.1.0.0
synopsis:            @its_out_of_tune's slide's project
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Tokiwo Ousaka
maintainer:          its.out.of.tune.this.my.music@gmail.com
-- copyright:           
category:            Other
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Common
                     , Bug01
                     , Bug02
                     , Day20150213takahashi
                     , Day20150530LensPrism
                     , Day20150704tadashisa
                     , Day20150913objective
                     , Day20151107pipes
                     , Day20160416NLNagoya
                     , Day20160627Sunotora
                     , Day20170206otr
                     , Day20170521Church
                     , Lib
  build-depends:       base >= 4.7 && < 5
                     , takahashi
                     , mtl
                     , lens
  default-language:    Haskell2010

executable slides-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , slides
                     , pipes
                     , objective
                     , mtl
  default-language:    Haskell2010
